[gd_scene load_steps=4 format=3 uid="uid://d25aqcnch8w6w"]

[ext_resource type="Script" path="res://1_MVC_Android/Tools/UI_Color_tools/Highlight_W/Highlight_Word_Pen/Highlight_Word_Pen.gd" id="1_om5sm"]
[ext_resource type="Texture2D" uid="uid://de014v63b2qcq" path="res://9_My_assets/1_assats/A_48.png" id="2_gqpqp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_20nyy"]
radius = 15.0

[node name="Highlight_Word_Pen" type="Node2D"]
script = ExtResource("1_om5sm")

[node name="TextureClear" type="TextureButton" parent="."]
offset_right = 30.0
offset_bottom = 28.0
texture_normal = ExtResource("2_gqpqp")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="CheckBox" type="CheckBox" parent="TextureClear"]
layout_mode = 0
offset_left = 2.0
offset_top = -24.0
offset_right = 26.0

[node name="Area2D_tools_Clear" type="Area2D" parent="."]

[node name="Co" type="CollisionShape2D" parent="Area2D_tools_Clear"]
position = Vector2(14, 14)
shape = SubResource("CircleShape2D_20nyy")

[connection signal="button_down" from="TextureClear" to="." method="_on_TextureClear_button_down"]
[connection signal="button_up" from="TextureClear" to="." method="_on_TextureClear_button_up"]
[connection signal="body_entered" from="Area2D_tools_Clear" to="." method="_on_Area2D_tools_Clear_body_entered"]
